src/golden/cards/templates/nested/typeerrors/test.golden/condsBoolean.fl
	card CondsMustBeBoolean
		template top
			field1
				| 'hello' <- 'world'
